--- a/champ.css
+++ b/champ.css
@@ -21,6 +21,21 @@ body{
     color: white;
     overflow: auto;
 }
+#back{
+    text-decoration: none;
+    background-color: darkgray;
+    color: black;
+    border: solid 1px black;
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 5px;
+    text-align: center;
+ 
+}
+#back:hover{
+    background-color: black;
+    color: red;
+}
 #infos{
     display: flex;
     flex-direction: row;
